# Aplicatie-gestiune-componente-PC

./: CMakeLists.txt  main.cpp
Clase/: AdministrareComponenta.cpp  AdministrareComponenta.h  AdministrareConturi.cpp  AdministrareConturi.h  AdministrareCumparare.cpp  AdministrareCumparare.h  Client.cpp  Client.h  Componenta.cpp  Componenta.h  Cont.cpp  Cont.h  CumparaComponenta.cpp  CumparaComponenta.h  Validari.h
